--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
         {
             "label": "Build",
             "type": "shell",
-            "command": "hugo",
+            "command": "hugo --minify --gc",
             "group": {
                 "kind": "build",
                 "isDefault": true
