--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,28 +1,39 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "Hugo Dev",
-            "type": "shell",
-            "command": "hugo server --buildDrafts --buildExpired --buildFuture --navigateToChanged",
-            "group": {
-                "kind": "test",
-                "isDefault": true
-            },
-            "isBackground": true,
-            "problemMatcher": []
-        },
-        {
-            "label": "Build",
-            "type": "shell",
-            "command": "hugo --minify --gc",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "problemMatcher": []
-        }
-    ]
+  // See https://go.microsoft.com/fwlink/?LinkId=733558
+  // for the documentation about the tasks.json format
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "Hugo Dev in Docker",
+      "type": "shell",
+      "command": ".vscode/hugo-dev-in-docker.sh",
+      "group": {
+        "kind": "test",
+        "isDefault": false,
+      },
+      "isBackground": true,
+      "problemMatcher": [],
+    },
+    {
+      "label": "Hugo Dev",
+      "type": "shell",
+      "command": "hugo server --buildDrafts --buildExpired --buildFuture --navigateToChanged",
+      "group": {
+        "kind": "test",
+        "isDefault": true
+      },
+      "isBackground": true,
+      "problemMatcher": []
+    },
+    {
+      "label": "Build",
+      "type": "shell",
+      "command": "hugo --minify --gc",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "problemMatcher": []
+    }
+  ]
 }
