--- a/config/_default/menu.yaml
+++ b/config/_default/menu.yaml
@@ -1,5 +1,5 @@
 ### Custom menu
-### See https://docs.stack.jimmycai.com/configuration/custom-menu.html
+### See https://stack.jimmycai.com/config/menu
 ### To remove about, archive and search page menu item, remove `menu` field from their FrontMatter
 main: []
 
@@ -8,7 +8,7 @@ social:
     name: GitHub
     url: https://github.com/osguider/blog
     params:
-        icon: brand-github
+      icon: brand-github
 
   # - identifier: twitter
   #   name: Twitter
