add shortcodes shields

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -160,3 +160,7 @@ imageProcessing:
     enabled: true
   content:
     enabled: true
+
+# See: https://shields.io/
+shields:
+  domain: https://img.shields.io
