--- a/config/_default/menu.yaml
+++ b/config/_default/menu.yaml
@@ -14,17 +14,23 @@ social:
     url: https://mp.weixin.qq.com/mp/appmsgalbum?__biz=Mzg2NTk2OTM2OA==&action=getalbum&album_id=3076744176081600515#wechat_redirect
     params:
       icon: brand-wechat
-  # - identifier: juejin
-  #   name: 掘金
-  #   url: https://juejin.cn/user/2623892048592072/
-  #   params:
-  #     icon: brand-juejin
+  - identifier: juejin
+    name: 掘金
+    url: https://juejin.cn/user/2623892048592072/
+    params:
+      icon: brand-juejin
 
-  # - identifier: zhihu
-  #   name: 知乎
-  #   url: https://www.zhihu.com/people/osguider
+  - identifier: zhihu
+    name: 知乎
+    url: https://www.zhihu.com/people/osguider
+    params:
+      icon: brand-zhihu
+
+  # - identifier: csdn
+  #   name: CSDN
+  #   url: https://blog.csdn.net/osguider
   #   params:
-  #     icon: brand-zhihu
+  #     icon: brand-csdn
 
   # - identifier: twitter
   #   name: Twitter
