--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Hugo Site to Github Pages
+name: build-and-deploy
 
 on:
   push:
@@ -6,15 +6,10 @@ on:
   pull_request:
     branches: [main]
   workflow_run:
-    workflows: ["Create Post"]
+    workflows: ["create-post"]
     types: [completed]
     branches: [main]
   workflow_dispatch:
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
@@ -63,19 +58,57 @@ jobs:
           HUGO_ENV: production
         run: hugo --minify --gc --baseURL "${{ steps.pages.outputs.base_url }}/"
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+      - name: Upload Github Pages Artifact
+        uses: actions/upload-pages-artifact@v3.0.0
         with:
           path: ./public
 
-  # Deployment job
-  deploy:
+  # Deployment to github pages
+  deploy-to-github-pages:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+      actions: read
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        # see: https://github.com/actions/deploy-pages/
+        uses: actions/deploy-pages@v4.0.0
+        with:
+          artifact_name: github-pages
+
+  # Deploy to production
+  deploy-to-production:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: production
+      url: https://osguider.com/blog/
+    steps:
+      - name: Download Artifact
+        # see: https://github.com/actions/download-artifact
+        uses: actions/download-artifact@v4.1.0
+        with:
+          name: github-pages
+          path: ./public
+      - name: unArchive Artifact
+        run: |
+          ls -la --recursive
+      - name: Deploy to Production
+        id: projection
+        # @see: https://github.com/easingthemes/ssh-deploy
+        uses: easingthemes/ssh-deploy@v5.0.0
+        with:
+          ARGS: "-rlgoDzvc -i --delete"
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SOURCE: "./public/*"
+          REMOTE_HOST: ${{ secrets.SSH_REMOTE_HOST }}
+          REMOTE_PORT: ${{ secrets.SSH_REMOTE_PORT }}
+          REMOTE_USER: ${{ secrets.SSH_REMOTE_USER }}
+          TARGET: ${{ secrets.SSH_REMOTE_TARGET }}
+          SCRIPT_AFTER: cd "${{ secrets.SSH_REMOTE_TARGET }}" && ls -la && tar xf artifact.tar -C public/
