--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -51,36 +51,36 @@ jobs:
         id: pages
         uses: actions/configure-pages@v3
 
-      - name: Build With Hugo
+      - name: Build Github Pages
         env:
           # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
-        run: hugo --minify --gc --baseURL "${{ steps.pages.outputs.base_url }}/"
+        run: hugo --minify --gc
 
       - name: Upload Github Pages Artifact
         uses: actions/upload-pages-artifact@v3.0.0
         with:
           path: ./public
 
-  # Deployment to github pages
-  deploy-to-github-pages:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      pages: write
-      id-token: write
-      actions: read
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        # see: https://github.com/actions/deploy-pages/
-        uses: actions/deploy-pages@v4.0.0
-        with:
-          artifact_name: github-pages
+  # # Deployment to github pages
+  # deploy-to-github-pages:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   permissions:
+  #     pages: write
+  #     id-token: write
+  #     actions: read
+  #   environment:
+  #     name: github-pages
+  #     url: ${{ steps.deployment.outputs.page_url }}
+  #   steps:
+  #     - name: Deploy to GitHub Pages
+  #       id: deployment
+  #       # see: https://github.com/actions/deploy-pages/
+  #       uses: actions/deploy-pages@v4.0.0
+  #       with:
+  #         artifact_name: github-pages
 
   # Deploy to production
   deploy-to-production:
@@ -111,4 +111,4 @@ jobs:
           REMOTE_PORT: ${{ secrets.SSH_REMOTE_PORT }}
           REMOTE_USER: ${{ secrets.SSH_REMOTE_USER }}
           TARGET: ${{ secrets.SSH_REMOTE_TARGET }}
-          SCRIPT_AFTER: cd "${{ secrets.SSH_REMOTE_TARGET }}" && ls -la && tar xf artifact.tar -C public/
+          SCRIPT_AFTER: cd "${{ secrets.SSH_REMOTE_TARGET }}" && ls -la && tar xf artifact.tar -C blog/ && rm -rf artifact.tar
