--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -14,7 +14,7 @@ on:
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
+  group: "production"
   cancel-in-progress: false
 
 # Default to bash
@@ -114,5 +114,21 @@ jobs:
           SCRIPT_AFTER: |
             cd "${{ secrets.SSH_REMOTE_TARGET }}" \
             && tar xf artifact.tar -C blog/ \
-            && rm -rf artifact.tar \
-            && curl -s https://osguider.com/blog/sitemap.xml | grep -oP '<loc>\K[^<]+' | head -50 | curl -H 'Content-Type:text/plain' --data-binary @- "${{ secrets.BAIDU_SITMAP_UPLOAD_URL }}"
+            && rm -rf artifact.tar
+          # && curl -s https://osguider.com/blog/sitemap.xml | grep -oP '<loc>\K[^<]+' | head -50 | curl -H 'Content-Type:text/plain' --data-binary @- "${{ secrets.BAIDU_SITMAP_UPLOAD_URL }}"
+
+  push-urls-to-search-engines:
+    runs-on: ubuntu-latest
+    needs: deploy-to-production
+    steps:
+      - name: Push Urls To Search Engines
+        # see: https://github.com/actions/download-artifact
+        uses: 3Alan/search-engines-urls-push@v0.2.3
+        with:
+          site: osguider.com
+          sitemap: https://osguider.com/blog/sitemap.xml
+          count: 10
+          bing-token: ${{ secrets.WEBMASTER_BING_TOKEN }}
+          baidu-token: ${{ secrets.WEBMASTER_BAIDU_TOKEN }}
+          google-client-email: ${{ secrets.WEBMASTER_GOOGLE_CLIENT_EMAIL }}
+          google-private-key: ${{ secrets.WEBMASTER_GOOGLE_PRIVATE_KEY }}
