--- a/config/_default/menu.yaml
+++ b/config/_default/menu.yaml
@@ -9,22 +9,30 @@ social:
     url: https://github.com/osguider/blog
     params:
       icon: brand-github
+
   - identifier: wxmp
     name: 微信订阅号
     url: https://mp.weixin.qq.com/mp/appmsgalbum?__biz=Mzg2NTk2OTM2OA==&action=getalbum&album_id=3076744176081600515#wechat_redirect
     params:
       icon: brand-wechat
-  - identifier: juejin
-    name: 掘金
-    url: https://juejin.cn/user/2623892048592072/
-    params:
-      icon: brand-juejin
+
+  # - identifier: juejin
+  #   name: 掘金
+  #   url: https://juejin.cn/user/2623892048592072/
+  #   params:
+  #     icon: brand-juejin
 
   - identifier: zhihu
     name: 知乎
     url: https://www.zhihu.com/people/osguider
     params:
       icon: brand-zhihu
+
+  - identifier: rss
+    name: RSS
+    url: https://osguider.com/blog/index.xml
+    params:
+      icon: rss
 
   # - identifier: tencent-cloud
   #   name: 腾讯云开发者社区
@@ -38,8 +46,8 @@ social:
   #   params:
   #     icon: brand-csdn
 
-  # - identifier: twitter
-  #   name: Twitter
-  #   url: https://twitter.com
-  #   params:
-  #       icon: brand-twitter
+  - identifier: x
+    name: Twitter
+    url: https://x.com/osguider
+    params:
+      icon: brand-twitter
