--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -5,10 +5,10 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-  # workflow_run:
-  #   workflows: ["create-post"]
-  #   types: [completed]
-  #   branches: [main]
+  workflow_run:
+    workflows: ["create-post"]
+    types: [completed]
+    branches: [main]
   workflow_dispatch:
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
