config: 添加默认封面图，修改 docker 启动命令

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -144,7 +144,7 @@ defaultImage:
   opengraph:
     enabled: true
     local: true
-    src: images/gradient.svg
+    src: images/cover-black.svg
 
 # See: https://stack.jimmycai.com/config/color-scheme
 colorScheme:
